objects/child_object1__c.object
<CustomObject>
    <fields>
        <fullName>child_field_email_1__c</fullName>
        <label>child field email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>child_field_number_1__c</fullName>
        <label>child field number 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>child_field_number_2__c</fullName>
        <label>child field number 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>child_field_phone_1__c</fullName>
        <label>child field phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>child_field_phone_2__c</fullName>
        <label>child field phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>child_field_phone_3__c</fullName>
        <label>child field phone 3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>parent_relationship1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent object1</label>
        <referenceTo>Parent_object1__c</referenceTo>
        <relationshipLabel>child object1</relationshipLabel>
        <relationshipName>child_object1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>child object1</label>
    <nameField>
        <label>child object1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>child object1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Parent_number_1</fullName>
        <active>true</active>
        <errorConditionFormula>! ISNULL( parent_relationship1__r.Parent_field_phone_1__c )</errorConditionFormula>
        <errorMessage>is not to be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Parent_number_2</fullName>
        <active>true</active>
        <errorConditionFormula>! ISNULL(  parent_relationship1__r.Parent_field_phone_2__c  )</errorConditionFormula>
        <errorMessage>is not to be empty</errorMessage>
    </validationRules>
</CustomObject>